--- a/ipa_metrics/index.html
+++ b/ipa_metrics/index.html
@@ -27,10 +27,10 @@
         <div class="col-sm-6">
           <div>
           <label class="radio-inline">
-            <input type="radio" ng-model="ctrl.culcType" name="culcType" value="toSLOC">Production Costs -> SLOC
+            <input type="radio" ng-model="ctrl.calcType" value="toSLOC">Production Costs -> SLOC
           </label>
           <label class="radio-inline">
-            <input type="radio" ng-model="ctrl.culcType" name="culcType" value="toProductionCosts">SLOC -> Production Costs
+            <input type="radio" ng-model="ctrl.calcType" value="toProductionCosts">SLOC -> Production Costs
           </label>
           </div>
         </div>
