--- a/ipa_metrics/index.html
+++ b/ipa_metrics/index.html
@@ -27,10 +27,10 @@
         <div class="col-sm-6">
           <div>
           <label class="radio-inline">
-            <input type="radio" ng-model="ctrl.calcType" value="toSLOC">Production Costs -> SLOC
+            <input type="radio" ng-model="ctrl.calcType" ng-change="ctrl.calcTypeChange()" value="toSLOC">Production Costs -> SLOC
           </label>
           <label class="radio-inline">
-            <input type="radio" ng-model="ctrl.calcType" value="toProductionCosts">SLOC -> Production Costs
+            <input type="radio" ng-model="ctrl.calcType" ng-change="ctrl.calcTypeChange()" value="toProductionCosts">SLOC -> Production Costs
           </label>
           </div>
         </div>
@@ -40,13 +40,13 @@
         <div class="col-sm-6">
           <div class="input-group">
             <input type="number" class="form-control" ng-model="ctrl.sourceNum" value="" placeholder="Source">
-            <span class="input-group-addon">man month</span>
+            <span class="input-group-addon">{{ctrl.sourceUnit}}</span>
           </div>
         </div>
       </div>
     </form>
     <hr>
-    <div class="alert alert-success">{{ctrl.calculate()}}</div>
+    <div class="alert alert-success">{{ctrl.calculate()}} {{ctrl.resultUnit}}</div>
     <hr>
     <h3>Reference (from White Paper)</h3>
     <table class="table table-striped table-bordered table-condensed">
