--- a/ipa_metrics/index.html
+++ b/ipa_metrics/index.html
@@ -12,6 +12,19 @@
 <body>
   <div class="container" ng-controller="DMCCtrl as ctrl">
     <h1>Development Metrics Culculator</h1>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h3 class="panel-title">Readme</h3>
+          </div>
+          <div class="panel-body">
+&nbsp;&nbsp;この計算機は、IPAが公表している『ソフトウェア開発データ白書2014-2015』の「6.5 SLOC規模と工数」に記載されたデータを利用して、工数←→SLOCの変換を行うものです。<br>
+<p class="text-danger">&nbsp;&nbsp;ソフトウェア開発データ白書の注記にも記載のとおり、この計算式の結果は工数とSLOCの関係を特定のシステム開発事案について保証するものではありません。</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <h3>Conditions</h3>
     <form class="form-horizontal">
       <div class="form-group">
@@ -46,7 +59,11 @@
       </div>
     </form>
     <hr>
-    <div class="alert alert-success">{{ctrl.calculate()}} {{ctrl.resultUnit}}</div>
+    <div class="row">
+      <div class="col-md-3 col-md-offset-6">
+        <div class="alert alert-success text-right">{{ctrl.calculate()}} {{ctrl.resultUnit}}</div>
+      </div>
+    </div>
     <hr>
     <h3>Reference (from White Paper)</h3>
     <table class="table table-striped table-bordered table-condensed">
@@ -73,6 +90,7 @@
       <ul>
         <li><a href="https://angularjs.org/">https://angularjs.org/</a>
         <li><a href="http://getbootstrap.com/css/">http://getbootstrap.com/css/</a>
+        <li><a href="https://www.ipa.go.jp/sec/reports/20141226.html">https://www.ipa.go.jp/sec/reports/20141226.html</a>
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
